--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <mat-sidenav #sidenav>
     <app-menu [sidenav]="sidenav" [isLoggedIn]="isLoggedIn" (logoutEvent)="logout()"></app-menu>
   </mat-sidenav>
+
   <mat-sidenav-content>
     <mat-toolbar>
       <button 
@@ -15,21 +16,22 @@
         <ul>
           <li><a routerLink="/home">Home</a></li>
           <li><a routerLink="/wedding">Esküvők</a></li>
-          
-          <ng-container *ngIf="isLoggedIn">
+
+          @if (isLoggedIn) {
             <li><a routerLink="/profile">Profil</a></li>
             <li><a routerLink="/kedvencek">Kedvencek</a></li>
             <li><a routerLink="/admin-dashboard">Admin Dashboard</a></li>
             <li><a href="#" (click)="$event.preventDefault(); logout()">Logout</a></li>
-          </ng-container>
-          
-          <ng-container *ngIf="!isLoggedIn">
+          }
+
+          @if (!isLoggedIn) {
             <li><a routerLink="/login">Login</a></li>
             <li><a routerLink="/registration">Registration</a></li>
-          </ng-container>
+          }
         </ul>
       </nav>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+
+    <router-outlet />
   </mat-sidenav-content>
 </mat-sidenav-container>
