--- a/src/app/pages/kedvencek/kedvencek.component.html
+++ b/src/app/pages/kedvencek/kedvencek.component.html
@@ -1,17 +1,24 @@
 <div class="favorite-grid">
-  <mat-card *ngFor="let wedding of favoriteWeddings" class="favorite-card">
-    <img [src]="'assets/images/' + wedding.imageUrl" alt="{{ wedding.title }}" class="thumbnail" />
+  @if (favoriteWeddings.length === 0) {
+    <p>Nincsenek kedvencek vagy nem vagy bejelentkezve.</p>
+  } @else {
+    @for (wedding of favoriteWeddings; track wedding.id) {
+      <mat-card class="favorite-card">
+        <img [src]="'assets/images/' + wedding.imageUrl" alt="{{ wedding.title }}" class="thumbnail" />
 
-    <mat-card-header>
-      <mat-card-title>{{ wedding.title }}</mat-card-title>
-      <mat-card-subtitle>
-        {{ wedding.location }} – {{ wedding.weddingDate | date: 'shortDate' }}
-      </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions>
-      <button mat-button color="warn" (click)="removeFromFavorites(wedding.id)">
-        Eltávolítás a kedvencekből
-      </button>
-    </mat-card-actions>
-  </mat-card>
+        <mat-card-header>
+          <mat-card-title>{{ wedding.title }}</mat-card-title>
+          <mat-card-subtitle>
+            {{ wedding.location }} – {{ wedding.weddingDate | date: 'shortDate' }}
+          </mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-actions>
+          <button mat-button color="warn" (click)="removeFromFavorites(wedding.id)">
+            Eltávolítás a kedvencekből
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    }
+  }
 </div>
